# podlet

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
src/podlet/: __init__.py  bootstrap.py  helpers.py  registrant.py  registrar.py  registry.py  resource.py  types.py
tests/: conftest.py
tests/unit/: test_bootstrap.py
