[project]
name = "podlet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "veloper" }
]
requires-python = ">=3.11"
dependencies = [
    "inflection>=0.5.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
